// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`query insight attributes meta > should return metadata for insight with attribute filter 1`] = `
{
  "attributes": [
    {
      "deprecated": false,
      "description": "",
      "id": "attr.product.id",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "title": "Product",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1054",
    },
  ],
  "displayForms": [
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "deprecated": false,
      "description": "",
      "id": "label.product.id.name",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "title": "Product Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
  ],
  "usage": {
    "inAttributes": [
      {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
    ],
    "inFilters": [
      {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
    ],
    "inMeasureFilters": [],
  },
}
`;

exports[`query insight attributes meta > should return metadata for insight with date attributes in buckets 1`] = `
{
  "attributes": [
    {
      "deprecated": false,
      "description": "Year",
      "displayForms": [
        {
          "attribute": {
            "uri": "/gdc/md/referenceworkspace/obj/497",
          },
          "deprecated": false,
          "description": "DisplayForm Year.",
          "id": "closed.aag81lMifn6q",
          "production": true,
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/515",
          },
          "title": "Year (Closed)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/515",
        },
      ],
      "drillDownStep": {
        "uri": "/gdc/md/referenceworkspace/obj/547",
      },
      "id": "closed.year",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/497",
      },
      "title": "Year (Closed)",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/497",
    },
    {
      "deprecated": false,
      "description": "Year",
      "displayForms": [
        {
          "attribute": {
            "uri": "/gdc/md/referenceworkspace/obj/332",
          },
          "deprecated": false,
          "description": "DisplayForm Year.",
          "id": "created.aag81lMifn6q",
          "production": true,
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/350",
          },
          "title": "Year (Created)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/350",
        },
      ],
      "drillDownStep": {
        "uri": "/gdc/md/referenceworkspace/obj/382",
      },
      "id": "created.year",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/332",
      },
      "title": "Year (Created)",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/332",
    },
  ],
  "displayForms": [
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/497",
      },
      "deprecated": false,
      "description": "DisplayForm Year.",
      "id": "closed.aag81lMifn6q",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/515",
      },
      "title": "Year (Closed)",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/515",
    },
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/332",
      },
      "deprecated": false,
      "description": "DisplayForm Year.",
      "id": "created.aag81lMifn6q",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/350",
      },
      "title": "Year (Created)",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/350",
    },
  ],
  "usage": {
    "inAttributes": [
      {
        "identifier": "closed.aag81lMifn6q",
        "type": "displayForm",
      },
      {
        "identifier": "created.aag81lMifn6q",
        "type": "displayForm",
      },
    ],
    "inFilters": [],
    "inMeasureFilters": [],
  },
}
`;

exports[`query insight attributes meta > should return metadata for insight with multiple attributes in buckets 1`] = `
{
  "attributes": [
    {
      "deprecated": false,
      "description": "",
      "id": "attr.product.id",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "title": "Product",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1054",
    },
    {
      "deprecated": false,
      "description": "",
      "id": "attr.owner.department",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1088",
      },
      "title": "Department",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1088",
    },
    {
      "deprecated": false,
      "description": "",
      "id": "attr.stage.name",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1091",
      },
      "title": "Stage Name",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1091",
    },
    {
      "deprecated": false,
      "description": "",
      "id": "attr.owner.region",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "title": "Region",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1086",
    },
  ],
  "displayForms": [
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "deprecated": false,
      "description": "",
      "id": "label.product.id.name",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "title": "Product Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/1088",
      },
      "deprecated": false,
      "description": "",
      "id": "label.owner.department",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "title": "Department",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1089",
    },
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/1091",
      },
      "deprecated": false,
      "description": "",
      "id": "label.stage.name.stagename",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1092",
      },
      "title": "Stage Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1092",
    },
    {
      "attribute": {
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "deprecated": false,
      "description": "",
      "id": "label.owner.region",
      "production": true,
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "title": "Region",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1087",
    },
  ],
  "usage": {
    "inAttributes": [
      {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
      {
        "identifier": "label.owner.department",
        "type": "displayForm",
      },
      {
        "identifier": "label.stage.name.stagename",
        "type": "displayForm",
      },
      {
        "identifier": "label.owner.region",
        "type": "displayForm",
      },
    ],
    "inFilters": [],
    "inMeasureFilters": [],
  },
}
`;
